charts/internal/calico/templates/node/np-allow-to-goldmane.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    gardener.cloud/description: |
      Allows traffic from calico node to goldmane
  name: gardener.cloud--allow-from-calico-node-to-goldmane
  namespace: kube-system
  labels:
    origin: gardener
spec:
  egress:
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: goldmane
    ports:
    - port: 7443
      protocol: TCP
  podSelector:
    matchLabels:
      k8s-app: calico-node
  policyTypes:
  - Egress
